--- a/index.html
+++ b/index.html
@@ -1,7 +1,188 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Official website for Air Combat Sandbox, the ultimate aerial warfare experience.">
+    <title>Air Combat Sandbox</title>
+    <!-- Link to external stylesheets or CSS frameworks -->
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Add a favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #1e1e2f;
+            color: #ffffff;
+        }
+
+        header {
+            background: linear-gradient(90deg, #0a74da, #134e5e);
+            padding: 1rem;
+            text-align: center;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+            text-transform: uppercase;
+        }
+
+        nav {
+            margin-top: 1rem;
+        }
+
+        nav a {
+            color: #ffffff;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.1rem;
+            transition: color 0.3s;
+        }
+
+        nav a:hover {
+            color: #0a74da;
+        }
+
+        .hero {
+            text-align: center;
+            padding: 5rem 1rem;
+            background: url('background.jpg') no-repeat center center / cover;
+        }
+
+        .hero h2 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+
+        .hero p {
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 0.8rem 1.5rem;
+            background: #0a74da;
+            color: #ffffff;
+            text-transform: uppercase;
+            font-weight: bold;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+
+        .btn:hover {
+            background: #134e5e;
+        }
+
+        section {
+            padding: 3rem 1rem;
+            text-align: center;
+        }
+
+        section h3 {
+            margin-bottom: 1.5rem;
+            font-size: 2rem;
+        }
+
+        .feature-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            margin: 0 auto;
+            max-width: 1200px;
+        }
+
+        .feature {
+            padding: 1.5rem;
+            background: #25263b;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .feature i {
+            font-size: 2rem;
+            color: #0a74da;
+            margin-bottom: 1rem;
+        }
+
+        footer {
+            background: #101014;
+            padding: 2rem;
+            text-align: center;
+            color: #777777;
+        }
+
+        footer a {
+            color: #0a74da;
+            text-decoration: none;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1>Air Combat Sandbox</h1>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#features">Features</a>
+            <a href="#media">Media</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h2>Take to the Skies</h2>
+        <p>Experience the ultimate aerial combat simulation in Air Combat Sandbox. Build, fly, and conquer!</p>
+        <a href="#" class="btn">Play Now</a>
+    </section>
+
+    <section id="features">
+        <h3>Game Features</h3>
+        <div class="feature-grid">
+            <div class="feature">
+                <i class="fas fa-fighter-jet"></i>
+                <h4>Realistic Flight Physics</h4>
+                <p>Feel the thrill of realistic aerodynamics and flight mechanics.</p>
+            </div>
+            <div class="feature">
+                <i class="fas fa-map"></i>
+                <h4>Open-World Maps</h4>
+                <p>Explore vast, dynamic maps filled with challenges and missions.</p>
+            </div>
+            <div class="feature">
+                <i class="fas fa-users"></i>
+                <h4>Multiplayer Mode</h4>
+                <p>Compete or cooperate with players worldwide in real-time.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="media">
+        <h3>Game Media</h3>
+        <p>Check out screenshots and videos of the action-packed gameplay.</p>
+        <!-- Placeholder for a gallery or carousel -->
+    </section>
+
+    <section id="contact">
+        <h3>Contact Us</h3>
+        <p>Have questions or feedback? Reach out to our team.</p>
+        <!-- Add a contact form or details -->
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Air Combat Sandbox. All rights reserved.</p>
+        <p>
+            Follow us on 
+            <a href="#">Twitter</a>, 
+            <a href="#">YouTube</a>, and 
+            <a href="#">Facebook</a>.
+        </p>
+    </footer>
 </body>
 </html>
