--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Official website for Air Combat Sandbox, the ultimate aerial warfare experience.">
     <title>Air Combat Sandbox</title>
-    <!-- Link to external stylesheets or CSS frameworks -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Add a favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
@@ -19,34 +17,42 @@
             color: #ffffff;
         }
 
-        header {
-            background: linear-gradient(90deg, #0a74da, #134e5e);
-            padding: 1rem;
-            text-align: center;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        .top-bar {
+            background: #101014;
+            padding: 0.5rem 1rem;
+            display: flex;
+            justify-content: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
 
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-            text-transform: uppercase;
-        }
-
-        nav {
-            margin-top: 1rem;
-        }
-
-        nav a {
+        .top-bar nav a {
             color: #ffffff;
-            margin: 0 15px;
+            margin: 0 10px;
             text-decoration: none;
             font-weight: bold;
-            font-size: 1.1rem;
+            font-size: 1rem;
             transition: color 0.3s;
         }
 
-        nav a:hover {
+        .top-bar nav a:hover {
             color: #0a74da;
+        }
+
+        .title-container {
+            text-align: center;
+            padding: 1rem;
+            background: linear-gradient(90deg, #0a74da, #134e5e);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .title-container h1 {
+            margin: 0;
+            font-size: 2.5rem;
+            color: #ffffff;
+            text-transform: uppercase;
         }
 
         .hero {
@@ -127,13 +133,17 @@
 </head>
 <body>
     <header>
-        <h1>Air Combat Sandbox</h1>
-        <nav>
-            <a href="#about">About</a>
-            <a href="#features">Features</a>
-            <a href="#media">Media</a>
-            <a href="#contact">Contact</a>
-        </nav>
+        <div class="top-bar">
+            <nav>
+                <a href="#about">About</a>
+                <a href="#features">Features</a>
+                <a href="#media">Media</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
+        <div class="title-container">
+            <h1>Air Combat Sandbox</h1>
+        </div>
     </header>
 
     <section class="hero">
