--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
             display: flex;
             justify-content: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-            position: sticky;
+            position: fixed;
             top: 0;
+            left: 0;
+            width: 100%;
             z-index: 1000;
         }
 
@@ -46,6 +48,7 @@
             padding: 1rem;
             background: linear-gradient(90deg, #0a74da, #134e5e);
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            margin-top: 3rem;
         }
 
         .title-container h1 {
@@ -147,8 +150,9 @@
     </header>
 
     <section class="hero">
-        <h2>Take to the Skies</h2>
-        <p>Experience the ultimate aerial combat simulation in Air Combat Sandbox. Build, fly, and conquer!</p>
+        <h2>Gameplay</h2>
+        <p>
+            Experience the thrill of air combat in a massive, open-world military sandbox. Plan and execute missions to eliminate a diverse array of enemy targets within an ever-evolving dynamic campaign. Unleash your creativity with the powerful 3D mission editor, allowing you to create, play, and share custom missions. Jump into the action with the instant action mission generator.</p>
         <a href="#" class="btn">Play Now</a>
     </section>
 
@@ -161,14 +165,29 @@
                 <p>Feel the thrill of realistic aerodynamics and flight mechanics.</p>
             </div>
             <div class="feature">
-                <i class="fas fa-map"></i>
-                <h4>Open-World Maps</h4>
-                <p>Explore vast, dynamic maps filled with challenges and missions.</p>
+                <i class="fas fa-plane"></i>
+                <h4>Wide Variety of Vehicles</h4>
+                <p>Fly aircraft from WWI biplanes to modern jets and encounter diverse ground and sea vehicles.</p>
             </div>
             <div class="feature">
-                <i class="fas fa-users"></i>
-                <h4>Multiplayer Mode</h4>
-                <p>Compete or cooperate with players worldwide in real-time.</p>
+                <i class="fas fa-globe"></i>
+                <h4>Open-World Levels</h4>
+                <p>Explore vast and immersive open-world maps.</p>
+            </div>
+            <div class="feature">
+                <i class="fas fa-chess-board"></i>
+                <h4>Dynamic Campaign</h4>
+                <p>Plan and fly missions in real-time strategy mode to conquer enemy territories.</p>
+            </div>
+            <div class="feature">
+                <i class="fas fa-cogs"></i>
+                <h4>3D Mission Editor</h4>
+                <p>Create, share, and play your own custom missions with powerful tools.</p>
+            </div>
+            <div class="feature">
+                <i class="fas fa-bolt"></i>
+                <h4>Instant Action</h4>
+                <p>Generate and jump into action-packed missions instantly.</p>
             </div>
         </div>
     </section>
