--- a/index.html
+++ b/index.html
@@ -152,8 +152,11 @@
     <section class="hero">
         <h2>Gameplay</h2>
         <p>
-            Experience the thrill of air combat in a massive, open-world military sandbox. Plan and execute missions to eliminate a diverse array of enemy targets within an ever-evolving dynamic campaign. Unleash your creativity with the powerful 3D mission editor, allowing you to create, play, and share custom missions. Jump into the action with the instant action mission generator.</p>
-        <a href="#" class="btn">Play Now</a>
+            Experience the thrill of air combat in a massive, open-world military sandbox. Plan and execute missions to eliminate a diverse array of enemy targets within an ever-evolving dynamic campaign. Unleash your creativity with the powerful 3D mission editor, allowing you to create, play, and share custom missions. Jump into the action with the instant action mission generator.
+        </p>
+        <a href="https://store.steampowered.com/app/your_game_id" target="_blank">
+            <img src="https://yourusername.github.io/yourrepository/Steam_2016_logo_black.svg" alt="Play on Steam" style="width: 150px; height: auto;">
+        </a>
     </section>
 
     <section id="features">
@@ -208,7 +211,7 @@
         <p>&copy; 2024 Air Combat Sandbox. All rights reserved.</p>
         <p>
             Follow us on 
-            <a href="#">Twitter</a>, 
+            <a href="#">X</a>, 
             <a href="#">YouTube</a>, and 
             <a href="#">Facebook</a>.
         </p>
