--- a/index.html
+++ b/index.html
@@ -154,10 +154,12 @@
         <p>
             Experience the thrill of air combat in a massive, open-world military sandbox. Plan and execute missions to eliminate a diverse array of enemy targets within an ever-evolving dynamic campaign. Unleash your creativity with the powerful 3D mission editor, allowing you to create, play, and share custom missions. Jump into the action with the instant action mission generator.
         </p>
-        <a href="https://store.steampowered.com/app/your_game_id" target="_blank">
-            <img src="https://github.com/Rookut/rookut.github.io/blob/main/Steam_2016_logo_black.svg.png" alt="Play on Steam" style="width: 150px; height: auto;">
+        <a href="https://store.steampowered.com/app/your_game_id" target="_blank" style="display: inline-block; border: 2px solid #000; padding: 10px; text-align: center;">
+            <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Steam_2016_logo_black.svg.png" alt="Play on Steam" style="width: 150px; height: auto;">
         </a>
     </section>
+    
+    
 
     <section id="features">
         <h3>Game Features</h3>
