--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         .feature i {
             font-size: 2rem;
-            color: #0a74da;
+            color: #303030;
             margin-bottom: 1rem;
         }
 
@@ -145,7 +145,7 @@
             </nav>
         </div>
         <div class="title-container">
-            <img src="https://yourwebsite.com/path/to/logo.png" alt="Air Combat Sandbox Logo" style="width: 200px; height: auto;">
+            <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Cool-Text-469184805263216.png" alt="Air Combat Sandbox Logo" style="width: 200px; height: auto;">
         </div>
     </header>
 
