--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         }
 
         .top-bar nav a:hover {
-            color: #0a74da;
+            color: #292929;
         }
 
         .title-container {
             text-align: center;
             padding: 1rem;
-            background: linear-gradient(90deg, #0a74da, #134e5e);
+            background: linear-gradient(90deg, #222222, #414141);
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
             margin-top: 3rem;
         }
@@ -117,7 +117,7 @@
 
         .feature i {
             font-size: 2rem;
-            color: #303030;
+            color: #ffffff;
             margin-bottom: 1rem;
         }
 
@@ -129,7 +129,7 @@
         }
 
         footer a {
-            color: #0a74da;
+            color: #001931;
             text-decoration: none;
         }
     </style>
@@ -145,7 +145,7 @@
             </nav>
         </div>
         <div class="title-container">
-            <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Cool-Text-469184805263216.png" alt="Air Combat Sandbox Logo" style="width: 200px; height: auto;">
+            <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Cool-Text-469184805263216.png" alt="Air Combat Sandbox Logo" style="width: 500px; height: auto;">
         </div>
     </header>
 
