--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </nav>
         </div>
         <div class="title-container">
-            <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Cool-Text-469184805263216.png" alt="Air Combat Sandbox Logo" style="width: auto; height: auto;">
+            <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Cool-Text-469184805263216.png" alt="Air Combat Sandbox Logo" style="width: 200px; height: auto;">
         </div>
     </header>
 
