--- a/index.html
+++ b/index.html
@@ -149,6 +149,23 @@
         </div>
     </header>
 
+    <section id="about" style="position: relative; overflow: hidden;">
+        <!-- Video Background -->
+        <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
+            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+
+        <!-- Content Overlay -->
+        <div style="position: relative; padding: 5rem 1rem; color: #ffffff; text-align: center;">
+            <h2>About Air Combat Sandbox</h2>
+            <p>
+                Welcome to Air Combat Sandbox, the ultimate aerial warfare experience. Dive into massive open-world military
+                campaigns, take command of various aircraft, and unleash your creativity in a dynamic sandbox environment.
+            </p>
+            <a href="#features" class="btn">Learn More</a>
+        </div>
+    </section>
 
     <section class="hero">
         <h2>Gameplay</h2>
