--- a/index.html
+++ b/index.html
@@ -21,13 +21,29 @@
             background: #101014;
             padding: 0.5rem 1rem;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
+            align-items: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             z-index: 1000;
+        }
+
+        .top-bar .logo {
+            display: flex;
+            align-items: center;
+        }
+
+        .top-bar .logo img {
+            height: 40px;
+            margin-right: 15px;
+        }
+
+        .top-bar nav {
+            display: flex;
+            align-items: center;
         }
 
         .top-bar nav a {
@@ -44,11 +60,7 @@
         }
 
         .title-container {
-            text-align: center;
-            padding: 1rem;
-            background: linear-gradient(90deg, #222222, #414141);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-            margin-top: 3rem;
+            display: none; /* Hide the previous title container */
         }
 
         .title-container h1 {
@@ -137,6 +149,9 @@
 <body>
     <header>
         <div class="top-bar">
+            <div class="logo">
+                <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Cool-Text-469184805263216.png" alt="Air Combat Sandbox Logo">
+            </div>
             <nav>
                 <a href="#about">About</a>
                 <a href="#features">Features</a>
@@ -145,7 +160,7 @@
             </nav>
         </div>
         <div class="title-container">
-            <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Cool-Text-469184805263216.png" alt="Air Combat Sandbox Logo" style="width: 200px; height: auto;">
+            <!-- This is now hidden, but kept for potential future use -->
         </div>
     </header>
 
