--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <style>
+            /* Add this to the existing style block */
+    html, body {
+        max-width: 100%;
+        overflow-x: hidden;
+    }
         body {
             font-family: Arial, sans-serif;
             margin: 0;
