--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
         }
 
         .top-bar {
-            background: #101014;
-            padding: 0.5rem 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 1000;
-        }
-
+    background: #101014;
+    padding: 0.5rem 1rem;
+    display: flex;
+    justify-content: center; /* Align items to the left */
+    align-items: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+}
+  
         .top-bar .logo {
             display: flex;
             align-items: center;
