--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Air Combat Sandbox</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel="icon" href="https://53.fs1.hubspotusercontent-na1.net/hub/53/hubfs/image8-2.jpg?width=595&height=400&name=image8-2.jpg" type="image/x-icon">
+    <link rel="icon" href="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/cooltext470785819170758.png" type="image/x-icon">
     <style>
             /* Add this to the existing style block */
     html, body {
