--- a/index.html
+++ b/index.html
@@ -3,375 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Official website for Air Combat Sandbox, the ultimate aerial warfare experience.">
-    <title>Air Combat Sandbox</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel="icon" href="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/cooltext470785819170758.png" type="image/x-icon">
+    <title>Game Title - Coming Soon</title>
     <style>
-            /* Add this to the existing style block */
-    html, body {
-        max-width: 100%;
-        overflow-x: hidden;
-    }
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #1e1e2f;
-            color: #ffffff;
-        }
-
-        .top-bar {
-    background: #101014;
-    padding: 1rem 1rem;
-    display: flex;
-    justify-content: center; /* Align items to the left */
-    align-items: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-}
-  
-        .top-bar .logo {
+            text-align: center;
+            background-color: #111;
+            color: #fff;
             display: flex;
-            align-items: center;
-        }
-
-        .top-bar .logo img {
-            height: 40px;
-            margin-right: 15px;
-        }
-
-        .top-bar nav {
-            display: flex;
-            align-items: center;
-        }
-
-        .top-bar nav a {
-            color: #ffffff;
-            margin: 0 10px;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 1rem;
-            transition: color 0.3s;
-        }
-
-        .top-bar nav a:hover {
-            color: #292929;
-        }
-
-        .hamburger-menu {
-            display: none;
             flex-direction: column;
-            cursor: pointer;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
-
-        .hamburger-menu .bar {
-            width: 25px;
-            height: 3px;
-            background-color: #ffffff;
-            margin: 3px 0;
-            transition: 0.4s;
+        .logo {
+            max-width: 300px;
+            margin-bottom: 20px;
         }
-
-        @media screen and (max-width: 768px) {
-            .top-bar nav {
-                display: none;
-                flex-direction: column;
-                width: 100%;
-                position: absolute;
-                top: 100%;
-                left: 0;
-                background: #101014;
-                padding: 1rem 0;
-            }
-
-            .top-bar nav.active {
-                display: flex;
-            }
-
-            .top-bar nav a {
-                margin: 10px 0;
-                text-align: center;
-            }
-
-            .hamburger-menu {
-                display: flex;
-            }
-
-            .hamburger-menu.active .bar:nth-child(1) {
-                transform: rotate(-45deg) translate(-5px, 6px);
-            }
-
-            .hamburger-menu.active .bar:nth-child(2) {
-                opacity: 0;
-            }
-
-            .hamburger-menu.active .bar:nth-child(3) {
-                transform: rotate(45deg) translate(-5px, -6px);
-            }
-        }
-
-        .title-container {
-            display: none;
-        }
-
-        .hero {
-            text-align: center;
-            padding: 5rem 1rem;
-            background: url('background.jpg') no-repeat center center / cover;
-            margin-top: 60px;
-        }
-
-        .hero h2 {
-            font-size: 2rem;
-            margin-bottom: 1rem;
-        }
-
-        .hero p {
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 0.8rem 1.5rem;
-            background: #0a74da;
-            color: #ffffff;
-            text-transform: uppercase;
-            font-weight: bold;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-
-        .btn:hover {
-            background: #134e5e;
-        }
-
-        section {
-            padding: 3rem 1rem;
-            text-align: center;
-        }
-
-        section h3 {
-            margin-bottom: 1.5rem;
-            font-size: 2rem;
-        }
-
-        .feature-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            margin: 0 auto;
-            max-width: 1200px;
-        }
-
-        .feature {
-            padding: 1.5rem;
-            background: #25263b;
+        .container {
+            max-width: 600px;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.1);
             border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .feature i {
-            font-size: 2rem;
-            color: #ffffff;
-            margin-bottom: 1rem;
-        }
-
-        footer {
-            background: #101014;
-            padding: 2rem;
-            text-align: center;
-            color: #777777;
-        }
-
-        footer a {
-            color: #001931;
-            text-decoration: none;
-        }
-
-        #about {
-            position: relative;
-            overflow: hidden;
-            margin-top: 60px;
-        }
-
-        #about video {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            z-index: -1;
-        }
-
-        .swiper-container {
-            width: 80%;
-            max-width: 800px;
-            margin: auto;
-            z-index: 1;
-            position: relative;
-        }
-
-        .swiper-slide img {
-            width: 100%;
-            border-radius: 10px;
-            display: block;
         }
     </style>
 </head>
 <body>
-    <header>
-        <div class="top-bar">
-            <div class="logo">
-                <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Cool-Text-469184805263216.png" alt="Air Combat Sandbox Logo">
-            </div>
-            <div class="hamburger-menu">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
-            <nav>
-                <a href="#about">About</a>
-                <a href="#features">Features</a>
-                <a href="#media">Media</a>
-                <a href="#contact">Contact</a>
-            </nav>
-        </div>
-    </header>
-
-    <section id="about" style="position: relative; overflow: hidden;">
-        <video autoplay loop muted playsinline style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
-            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-
-        <div style="position: relative; padding: 5rem 1rem; color: #ffffff; text-align: center;">
-            <h2>About Air Combat Sandbox</h2>
-            <p>
-                Welcome to Air Combat Sandbox, the ultimate aerial warfare experience. Dive into massive open-world military
-                campaigns, take command of various aircraft, and unleash your creativity in a dynamic sandbox environment.
-            </p>
-            <a href="#features" class="btn">Learn More</a>
-        </div>
-    </section>
-
-    <section class="hero">
-        <h2>Gameplay</h2>
-        <p>
-            Experience the thrill of air combat in a massive, open-world military sandbox. Plan and execute missions to eliminate a diverse array of enemy targets within an ever-evolving dynamic campaign. Unleash your creativity with the powerful 3D mission editor, allowing you to create, play, and share custom missions. Jump into the action with the instant action mission generator.
-        </p>
-        <h3>Wishlist on Steam</h3>
-        <a href="https://store.steampowered.com/app/your_game_id" target="_blank" style="display: inline-block; border: 2px solid #000; padding: 10px; text-align: center; background-color: #303030;">
-            <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Steam_2016_logo_black.svg.png" alt="Play on Steam" style="width: 150px; height: auto;">
-        </a>
-    </section>
-
-    <section id="features">
-        <h3>Game Features</h3>
-        <div class="feature-grid">
-            <div class="feature">
-                <i class="fas fa-fighter-jet"></i>
-                <h4>Realistic Flight Physics</h4>
-                <p>Feel the thrill of realistic aerodynamics and flight mechanics.</p>
-            </div>
-            <div class="feature">
-                <i class="fas fa-plane"></i>
-                <h4>Wide Variety of Vehicles</h4>
-                <p>Fly aircraft from WWI biplanes to modern jets and encounter diverse ground and sea vehicles.</p>
-            </div>
-            <div class="feature">
-                <i class="fas fa-globe"></i>
-                <h4>Open-World Levels</h4>
-                <p>Explore vast and immersive open-world maps.</p>
-            </div>
-            <div class="feature">
-                <i class="fas fa-chess-board"></i>
-                <h4>Dynamic Campaign</h4>
-                <p>Plan and fly missions in real-time strategy mode to conquer enemy territories.</p>
-            </div>
-            <div class="feature">
-                <i class="fas fa-cogs"></i>
-                <h4>3D Mission Editor</h4>
-                <p>Create, share, and play your own custom missions with powerful tools.</p>
-            </div>
-            <div class="feature">
-                <i class="fas fa-bolt"></i>
-                <h4>Instant Action</h4>
-                <p>Generate and jump into action-packed missions instantly.</p>
-            </div>
-        </div>
-    </section>
-
-    <section id="media">
-        <h3>Game Media</h3>
-        <p>Check out screenshots and videos of the action-packed gameplay.</p>
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Screenshot%202024-10-18%20195005.png" alt="Screenshot 1">
-                </div>
-                <div class="swiper-slide">
-                    <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Screenshot%202024-11-10%20222907.png" alt="Screenshot 2">
-                </div>
-                <div class="swiper-slide">
-                    <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Screenshot%202024-11-20%20211125.png" alt="Screenshot 3">
-                </div>
-                <div class="swiper-slide">
-                    <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Screenshot%202024-11-27%20165523.png" alt="Screenshot 4">
-                </div>
-            </div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-    </section>
-
-    <section id="contact">
-        <h3>Contact Us</h3>
-        <p>Have questions or feedback? Reach out to our team.</p>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Air Combat Sandbox. All rights reserved.</p>
-        <p>
-            Follow us on 
-            <a href="#">X</a>, 
-            <a href="#">YouTube</a>, and 
-            <a href="#">Facebook</a>.
-        </p>
-    </footer>
-
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script>
-        // Hamburger Menu Toggle
-        const hamburgerMenu = document.querySelector('.hamburger-menu');
-        const nav = document.querySelector('.top-bar nav');
-
-        hamburgerMenu.addEventListener('click', () => {
-            hamburgerMenu.classList.toggle('active');
-            nav.classList.toggle('active');
-        });
-
-        // Swiper Initialization
-        const swiper = new Swiper('.swiper-container', {
-            loop: true,
-            pagination: {
-                el: '.swiper-pagination',
-                clickable: true,
-            },
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
-        });
-    </script>
+    <div class="container">
+        <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Cool-Text-469184805263216.png" alt="Game Logo" class="logo">
+       <!-- <h1>Air Combat Sandbox</h1>-->
+        <p>Game to be announced soon. Please stay tuned!</p>
+    </div>
 </body>
 </html>
