--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #111;
+            background: url('your-background-image-url.jpg') no-repeat center center fixed;
+            background-size: cover;
             color: #fff;
             display: flex;
             flex-direction: column;
@@ -17,6 +18,7 @@
             height: 100vh;
             margin: 0;
         }
+
         .logo {
             max-width: 300px;
             margin-bottom: 20px;
