--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background: url('your-background-image-url.jpg') no-repeat center center fixed;
+            background: url('https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/clouds.png') no-repeat center center fixed;
             background-size: cover;
             color: #fff;
             display: flex;
@@ -26,14 +26,14 @@
         .container {
             max-width: 600px;
             padding: 20px;
-            background-color: rgba(255, 255, 255, 0.1);
+            background-color: rgba(54, 54, 54, 0.932);
             border-radius: 10px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/Cool-Text-469184805263216.png" alt="Game Logo" class="logo">
+        <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/logo-big.png" alt="Game Logo" class="logo">
        <!-- <h1>Air Combat Sandbox</h1>-->
         <p>Game to be announced soon. Please stay tuned!</p>
     </div>
