--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/logo-big.png" alt="Game Logo" class="logo">
+        <img src="https://raw.githubusercontent.com/Rookut/rookut.github.io/refs/heads/main/ACS%20logo.png" alt="Game Logo" class="logo">
        <!-- <h1>Air Combat Sandbox</h1>-->
         <p>Game to be announced soon. Please stay tuned!</p>
     </div>
